# labs-mfg-capabilities

./: .env.example  .gitignore  README.md  pyproject.toml
data/dev/: products_with_specs_good.csv
data/from_bzo/: country_oven_kdt_downtime.csv  kdt_production_20250618.csv
data/from_central_planning/: 2025 Capacity COB.xlsx  2025 Capacity RCK.xlsx  2025 Capacity State Avenue.xlsx  products_from_capacity.xlsx
data/from_chris_hlass/: LinePerformanceByProduct_LTCP.rpt_report.xlsx  LinePerformanceByProduct_LTCP_modified.xlsx
data/from_delbert/: COB Products by Line.xls
nbs/: inspect_capacity.ipynb  inspect_chris_hlass_data.ipynb  inspect_delbert_data.ipynb  inspect_kdt.ipynb
nbs/explore/: inspect_capacity_sheets.ipynb  inspect_kdt_downtime.ipynb  inspect_kdt_production.ipynb
nbs/prepare_data/: join_with_formulations.ipynb
src/mfg_capabilities/: __init__.py  config.py  utils.py
src/mfg_capabilities/mcp/: server.py
